--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-assign-appraiser/packet-assign-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-assign-appraiser/packet-assign-appraiser.component.html
@@ -1,5 +1,5 @@
 <kt-portlet>
-    <kt-modal-header [title]='title' (action)="action($event)"></kt-modal-header>
+    <kt-modal-header [title]='"Assign Appraiser"' (action)="action($event)"></kt-modal-header>
     <kt-portlet-body>
         <form [formGroup]="packetForm">
             <div class="row ">
@@ -9,11 +9,15 @@
                             <label class="kt-padding-l-10 mandatory">Packet Id</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" class="form-control" formControlName="packetUniqueId"
+                            <kt-multi-select-search [items]="data.packetData" [multiple]="true"
+                                [placeholder]="'Selected Packets'" formControlName="multiselect"
+                                [bindLabel]="'packetUniqueId'" [selectAll]="true">
+                            </kt-multi-select-search>
+
+                            <!-- <input type="text" class="form-control" formControlName="packetUniqueId"
                                 placeholder="PAC-01"
-                                [class.isError]="packetForm.controls.packetUniqueId.invalid &&  packetForm.controls.packetUniqueId.touched">
-                            <mat-error
-                                *ngIf="controls.packetUniqueId.touched && controls.packetUniqueId.errors?.required">
+                                [class.isError]="packetForm.controls.packetUniqueId.invalid &&  packetForm.controls.packetUniqueId.touched"> -->
+                            <mat-error *ngIf="controls.multiselect.touched && controls.multiselect.errors?.required">
                                 Required field
                             </mat-error>
                         </div>
@@ -21,33 +25,13 @@
 
                     <div class="row justify-content-center kt-margin-t-10">
                         <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">Branch</label>
-                        </div>
-                        <div class="col-8">
-                            <select class="form-control" formControlName="internalUserBranch"
-                                [class.isError]="controls.internalUserBranch.touched && controls.internalUserBranch.invalid">
-                                <option value="" [disabled]="true" [selected]="true"> Select Branch
-                                </option>
-                                <option *ngFor="let branch of branches" [value]="branch.id">
-                                    {{branch.name | titlecase}}
-                                </option>
-                            </select>
-                            <mat-error
-                                *ngIf="controls.internalUserBranch.touched && controls.internalUserBranch.errors?.required">
-                                Required field
-                            </mat-error>
-                        </div>
-
-                    </div>
-
-                    <div *ngIf="data.packetData.appraiserId" class="row justify-content-center kt-margin-t-10">
-                        <div class="col-4 form-label">
                             <label class="kt-padding-l-10 mandatory">Appraiser</label>
                         </div>
                         <div class="col-8">
+
                             <select class="form-control" formControlName="appraiserId"
                                 [class.isError]="controls.appraiserId.touched && controls.appraiserId.invalid">
-                                <option value="" [disabled]="true" [selected]="true"> Select Branch
+                                <option value="" [disabled]="true" [selected]="true"> Select Appraiser
                                 </option>
                                 <option *ngFor="let appraiser of appraisers" [value]="appraiser.id">
                                     {{appraiser.firstName | titlecase}}&nbsp;{{appraiser.lastName | titlecase}}
