--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
@@ -20,9 +20,8 @@
                         </div>
                     </mat-tab>
                     <mat-tab label="Customer Acknowledgment" [disabled]="disabled[2]">
-                        <kt-upload-documents [scrapIds]="scrapIds" [acknowledgmentDocuments]="customerDetail"
-                            [totalAmt]="totalAmount" [showButton]="showButton">
-                        </kt-upload-documents>
+                        <kt-upload-documents [scrapIds]="scrapIds" (next)="next($event)"
+                            [acknowledgmentDocuments]="customerDetail" [showButton]="showButton"></kt-upload-documents>
                     </mat-tab>
                     <mat-tab label="Melting Ornaments" [disabled]="disabled[3]">
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab p-0"
@@ -30,7 +29,7 @@
                             <kt-ornaments [action]="action" (next)="next($event)" [disable]="disabledForm"
                                 [meltingDetails]="customerDetail" (finaltotalAmt)="finalScrapAmount($event)"
                                 [scrapIds]="scrapIds" [ornamentType]="ornamentType" [showButton]="showButton"
-                                [meltingOrnament]="true">
+                                [meltingOrnament]="true" [processingCharges]="processingCharges">
                             </kt-ornaments>
                         </div>
                     </mat-tab>
