--- a/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
@@ -4,7 +4,7 @@
             <div class="col-2 form-label ">
                 <label class="kt-padding-l-10">Outstanding Loan Amount</label>
             </div>
-            <div class="col">
+            <div class="col-4">
                 <input type="text" formControlName="outstandingLoanAmount" class="form-control "
                     [class.isError]="controls.outstandingLoanAmount.touched && controls.outstandingLoanAmount.invalid"
                     placeholder="Outstanding">
@@ -125,38 +125,9 @@
                 <mat-error *ngIf="controls.declaration.touched && controls.declaration.invalid">Field Required
                 </mat-error>
             </div>
-            <div class="col" *ngIf="showScrapAcknowledgementFlag">
-                <input type="text" formControlName="processingCharges" class="form-control "
-                    [class.isError]="controls.processingCharges.touched && controls.processingCharges.invalid"
-                    placeholder="Processing Charges" readonly>
-                <mat-error *ngIf="controls.processingCharges.touched && controls.processingCharges.invalid">
-                    Field Required</mat-error>
-            </div>
-            <div class="col" *ngIf="showScrapAcknowledgementFlag">
-                <select class="form-control" formControlName="standardDeduction"
-                    [class.isError]="controls.standardDeduction.touched && controls.standardDeduction.invalid">
-                    <option value="" [disabled]="true" [selected]="true">Select Standard Deduction</option>
-                    <option [value]="sd.standardDeduction" *ngFor="let sd of standardDeductionArr">
-                        {{sd.standardDeduction}}
-                    </option>
-                </select>
-                <mat-error *ngIf="controls.standardDeduction.touched && controls.standardDeduction.invalid">
-                    <span *ngIf="controls.standardDeduction.errors?.required">Field Required</span>
-                </mat-error>
-            </div>
-            <div class="col" *ngIf="showScrapAcknowledgementFlag">
-                <select class="form-control" formControlName="customerConfirmationStatus"
-                    [class.isError]="controls.customerConfirmationStatus.touched && controls.customerConfirmationStatus.invalid">
-                    <option value="" [disabled]="true" [selected]="true">Select Customer confirmation Status</option>
-                    <option value="confirmed">Confirmed</option>
-                    <option value="incomplete">Incomplete</option>
-                </select>
-                <mat-error
-                    *ngIf="controls.customerConfirmationStatus.touched && controls.customerConfirmationStatus.invalid">
-                    <span *ngIf="controls.customerConfirmationStatus.errors?.required">Field
-                        Required</span>
-                </mat-error>
-            </div>
+            <div class="col" *ngIf="showScrapAcknowledgementFlag"></div>
+            <div class="col" *ngIf="showScrapAcknowledgementFlag"></div>
+            <div class="col" *ngIf="showScrapAcknowledgementFlag"></div>
             <div class="col" *ngIf="showScrapAcknowledgementFlag && showCustomerConfirmationFlag">
                 <div class="input-group mb-3 w-80"
                     [class.isError]="controls.customerConfirmation.touched && controls.customerConfirmation.invalid">
@@ -406,6 +377,6 @@
         </div>
     </div>
     <div class="col-11 text-right kt-padding-t-15" *ngIf="showButton">
-        <kt-button [type]="'button'" [value]="'Next'" (click)="save(buttonName)"></kt-button>
+        <kt-button [type]="'button'" [value]="buttonValue" (click)="save(buttonName)"></kt-button>
     </div>
 </div>
