bhushan::changes in packets

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
@@ -37,7 +37,7 @@
                     <mat-header-cell *matHeaderCellDef>Appraiser</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <span *ngIf="role.appraiser">
-                            {{role.appraiser.firstName | titlecase}} &nbsp;&nbsp;
+                            {{role.appraiser.firstName | titlecase}} &nbsp;
                             {{role.appraiser.lastName | titlecase}}
                         </span>
                     </mat-cell>
