--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -56,6 +56,7 @@
                         </div>
                     </div>
                     <div class="row justify-content-around">
+
                         <div class="col-6">
                             <div class="row kt-margin-t-15">
                                 <div class="col-4 form-label">
@@ -99,8 +100,10 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                     <div class="row">
+
                         <div class="col-6">
                             <div class="row kt-margin-t-15 ">
                                 <div class="col-4 form-label">
@@ -158,7 +161,7 @@
                                 </div>
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.weightMachineZeroWeight.value"
-                                        class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
+                                        class="my-auto text-primary text-center kt-padding-l-15 kt-pointer "
                                         (click)="preview(ornament.controls.weightMachineZeroWeightData.value,idx)">View
                                         Image</label>
                                     <mat-error class="kt-padding-l-10"
@@ -346,10 +349,11 @@
                     </div>
                     <ng-template #loanOrnaments>
                         <div class="row">
+
                             <div class="col-6">
                                 <div class="row kt-margin-t-15">
                                     <div class="col-4 form-label">
-                                        <label class="my-auto text-color ">With Ornament</label>
+                                        <label class="my-auto text-color  ">With Ornament</label>
                                     </div>
                                     <div class="col-4 form-label">
                                         <label *ngIf="ornament.controls.withOrnamentWeight.value"
@@ -410,6 +414,7 @@
                             </div>
                         </div>
                         <div class="row">
+
                             <div class="col-6">
                                 <div class="row kt-margin-t-15">
                                     <div class="col-4 form-label">
@@ -447,6 +452,7 @@
                                     </div>
                                     <div class="col-4 form-label"
                                         *ngIf="ornament.controls.purityTestImage.touched && ornament.controls.purityTestImage.invalid">
+
                                         <!-- <label *ngIf="ornament.controls.purityTestImage.value.length > 0"
                                                     class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
                                                     (click)="preview(ornament.controls.purityTestImage.value,idx)">View Image</label> -->
@@ -465,6 +471,7 @@
                                                     (click)="removeImage('purityTestImage',idx,purityIndex)">x</span>
                                             </span>
                                         </ng-container>
+
                                     </div>
                                     <div class="col-1 text-right min-height-attach">
                                         <input type="file" #purity class="d-none"
@@ -487,6 +494,7 @@
                             </div>
                         </div>
                         <div class="row">
+
                             <div class="col-6">
                                 <div class="row kt-margin-t-15">
                                     <div class="col-4 form-label">
@@ -531,8 +539,11 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                         <div class="row">
+
+
                             <!-- <div class="col-6">
                                         <div class="row kt-margin-t-15 ">
                                             <div class="col-4 form-label">
@@ -578,7 +589,8 @@
                             (click)="preview(ornament.controls.ornamentImageData.value,idx)">
                     </div>
                     <div class="form-label">
-                        <label *ngIf="!ornament.controls.ornamentImage.value" class="my-auto m-auto pt-2">Upload
+                        <label *ngIf="!ornament.controls.ornamentImage.value"
+                            class="my-auto m-auto pt-2 mandatory ">Upload
                             Ornaments
                             Image</label>
                         <label *ngIf="ornament.controls.ornamentImage.value && !disable"
@@ -622,4 +634,4 @@
         <kt-button [value]="buttonValue" [type]="'button'" (click)="nextAction()"></kt-button>
     </div>
 </div>
-<button (click)="addmore()" class="addmore" [disabled]="disable" [hidden]="meltingOrnament">+ Add More</button>
+<button *ngIf="showAddMoreBtn" (click)="addmore()" class="addmore" [disabled]="disable" [hidden]="meltingOrnament">+ Add More</button>
