--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -131,7 +131,7 @@
                                 (click)="updateDocument(item)">Upload
                                 Documents
                             </button>
-                            <button *ngIf="item.documents" style="width: 130px;" class="apply-kyc"
+                            <button *ngIf="item.documents && !item.newLoanId" style="width: 130px;" class="apply-kyc"
                                 (click)="newLoan(item)">New Loan
                             </button>
                         </ng-container>
