--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -33,7 +33,7 @@
                                     <label [class.mandatory]="viewOnly"
                                         [ngClass]="userType == 5 ? 'cursor-not-allowed' : 'kt-pointer'"
                                         (click)="userType != 5 && webcam()" class=" text-primary"
-                                        style="font-weight: 600;">Upload Profile
+                                        style="font-weight: 600;">Change Profile
                                         Picture</label>
                                 </div>
                             </div>
