--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -18,7 +18,7 @@
                                         <input type="file" accept="image/png, image/jpeg" #files class="d-none"
                                             (input)="getFileInfo($event,'profile')" />
                                         <label (click)="webcam();" class="kt-pointer text-primary mandatory"
-                                            style="font-weight: 600;">Change Profile
+                                            style="font-weight: 600;">Upload Profile
                                             Picture</label>
                                     </div>
                                 </div>
