bhushan::packets selection bug

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -193,7 +193,7 @@
 								<input type="text" class="form-control" placeholder="Select File"
 									aria-label="Recipient's username" aria-describedby="basic-addon2" readonly
 									formControlName="form60"
-									[class.isError]="controls.form60.touched && controls.panImage.invalid" />
+									[class.isError]="controls.form60.touched && controls.form60.invalid" />
 								<div class="input-group-append">
 									<span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
 										(click)="form60.click()">Attach</span>
