upload packet csv api

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -126,7 +126,7 @@
 							<label class="mandatory  text-color font-weight-500">PAN / FORM 60 </label>
 						</div>
 						<div class="col-8">
-							<select class="form-control" formControlName="panType">
+							<select class="form-control" formControlName="panType" (change)='remove()'>
 								<option value=null selected disabled>Select</option>
 								<option value="pan">PAN</option>
 								<option value="form60">FORM 60</option>
