--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -132,5 +132,5 @@
 
 </div>
 <div class="text-right kt-padding-b-15" *ngIf="showButton && packets.controls.length">
-    <kt-button [type]="'button'" [value]="'Save'" (click)="save()"></kt-button>
+    <kt-button [type]="'button'" [value]="buttonName" (click)="save()"></kt-button>
 </div>
