--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -51,7 +51,7 @@
                             (ornamentType)="ornaments($event)">
                         </kt-approval>
                     </mat-tab>
-                    <mat-tab label="Packets"
+                    <mat-tab label="Packets" [disabled]="disabled[5]"
                         *ngIf="loanStage?.id !=6 && loanStage?.id !=1 && loanStage?.id && loanStage?.id != 9">
                         <!-- <ng-template> -->
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
@@ -72,13 +72,13 @@
                         </kt-approval>
                     </mat-tab>
 
-                    <mat-tab label="Upload Documents"
-                        *ngIf="loanStage?.id == 8 || loanStage?.id == 7 || loanStage?.id == 4 || url == 'view-loan'">
+                    <mat-tab label="Upload Documents" [disabled]="disabled[6]"
+                        *ngIf="loanStage?.id == 8 || loanStage?.id == 7 || loanStage?.id == 4 || (loanStage?.id == 8 || url =='view-loan') || (loanStage?.id == 7 || url =='view-loan') || (loanStage?.id == 4 || url =='view-loan')">
                         <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" (next)="next($event)"
                             [loanDocumnets]="customerDetail" [showButton]="showButton"></kt-upload-loan-documents>
                     </mat-tab>
 
-                    <mat-tab label="Loan Status Approval"
+                    <mat-tab label="Loan Status Approval" [disabled]="disabled[7]"
                         *ngIf="loanStage?.id == 7 || loanStage?.id == 4 || (url == 'view-loan' && loanStage?.id == 7) || (url == 'view-loan' && loanStage?.id == 4) || (url == 'view-loan' && loanStage?.id == 5)">
                         <kt-approval [action]="action" [disable]="approvalFrom" [details]="customerDetail"
                             [masterAndLoanIds]="masterAndLoanIds" [loanStage]="loanStage"
